--- a/ningunx-presx-por-luchar/docker-compose.yml
+++ b/ningunx-presx-por-luchar/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3"
 services:
   zola:
     image: balthek/zola:0.14.0 #Build once
-    command: "build --output-dir /www"
+    command: "build --output-dir ./www"
     working_dir: /site
     privileged: true
     volumes:
       - .:/site:rw
-      - ./public/www:/www:rw
+      - public_files:/www:rw
 
   swag:
     depends_on:
@@ -28,7 +28,7 @@ services:
       - CERTPROVIDER=zerossl
     volumes:
       - ./data:/config
-      - ./public/www:/config/www
+      - /app:/config/www
       - ~/.secrets/certbot:/config/dns-conf
     ports:
       - 443:443
