--- a/ningunx-presx-por-luchar/build
+++ b/ningunx-presx-por-luchar/build
@@ -1,1 +1,1 @@
-docker run -v "$(pwd)/web:/public" --workdir /public balthek/zola:0.14.0 build
+PWD=$(pwd); docker run -u "$(id -u):$(id -g)" -v "$PWD:/app" --workdir /app balthek/zola:0.14.0 build
