--- a/ningunx-presx-por-luchar/build
+++ b/ningunx-presx-por-luchar/build
@@ -1,1 +1,4 @@
+docker-compose up -d
 PWD=$(pwd); docker run -u "$(id -u):$(id -g)" -v "$PWD:/app" --workdir /app balthek/zola:0.14.0 build
+docker-compose restart
+docker-compose logs -f
