--- a/ningunx-presx-por-luchar/build
+++ b/ningunx-presx-por-luchar/build
@@ -1,6 +1,7 @@
 docker-compose up -d
-PWD=$(pwd); docker run -u "$(id -u):$(id -g)" -v "$PWD:/app" --workdir /app balthek/zola:0.14.0 build
-sudo chown -R abc: $PWD/public
+PWD=$(pwd); docker run -u "$(id -u):$(id -g)" -v "$PWD/www:/app" --workdir /app balthek/zola:0.14.0 build
+sudo chown -R www-data: $PWD/public
+mv $PWD/www/* ./public/
 docker exec swag "nginx -s reload"
 docker-compose logs -f
 #ssh root@box1 "command1; command2; command3"
