--- a/ningunx-presx-por-luchar/build
+++ b/ningunx-presx-por-luchar/build
@@ -1,7 +1,18 @@
-docker-compose up -d
-PWD=$(pwd); docker run -u -v "$PWD/www:/app" --workdir /app balthek/zola:0.14.0 build
+#docker-compose up -d
+#PWD=$(pwd); docker run -u -v "$PWD/www:/app" --workdir /app balthek/zola:0.14.0 build
 #PWD=$(pwd); docker run -u "$(id -u):$(id -g)" -v "$PWD/www:/app" --workdir /app balthek/zola:0.14.0 build
 
-mv $PWD/www/* ./public/
-docker exec swag "nginx -s reload"
-docker-compose logs -f
+#mv $PWD/www/* ./public/
+#docker exec swag "nginx -s reload"
+#docker-compose logs -f
+
+#### 
+FILE="deployment/.env"
+if [ -f "$FILE" ]; then
+    echo "$FILE exists. Running containers"
+else 
+    echo "$FILE does not exist. Create one before attempting to up"
+fi
+docker network create proxy 2>/dev/null || echo "Network created."
+docker-compose up -d -f deployment/blog.yaml
+docker-compose up -d -f deployment/traefik.yaml
