--- a/ningunx-presx-por-luchar/build
+++ b/ningunx-presx-por-luchar/build
@@ -1,19 +1,6 @@
-#docker-compose up -d
-#PWD=$(pwd); docker run -u -v "$PWD/www:/app" --workdir /app balthek/zola:0.14.0 build
+docker-compose up -d
+PWD=$(pwd); docker run -u -v "$PWD/www:/app" --workdir /app balthek/zola:0.14.0 build
 #PWD=$(pwd); docker run -u "$(id -u):$(id -g)" -v "$PWD/www:/app" --workdir /app balthek/zola:0.14.0 build
-
-#mv $PWD/www/* ./public/
-#docker exec swag "nginx -s reload"
-#docker-compose logs -f
-
-#### 
-FILE="deployment/.env"
-if [ -f "$FILE" ]; then
-    echo "$FILE exists. Running containers"
-else 
-    echo "$FILE does not exist. Create one before attempting to up"
-    exit 1
-fi
-docker network create proxy 2>/dev/null || echo "Network created."
-docker-compose -f deployment/traefik.yaml up -d --force-recreate
-docker-compose -f deployment/blog.yaml up -d --force-recreate
+mv $PWD/www/* ./public/
+docker exec swag "nginx -s reload"
+docker-compose logs -f
