--- a/ningunx-presx-por-luchar/build
+++ b/ningunx-presx-por-luchar/build
@@ -1,6 +1,5 @@
-docker-compose up -d
+docker-compose up -d --force-recreate
 PWD=$(pwd); docker run -u -v "$PWD/www:/app" --workdir /app balthek/zola:0.14.0 build
-#PWD=$(pwd); docker run -u "$(id -u):$(id -g)" -v "$PWD/www:/app" --workdir /app balthek/zola:0.14.0 build
 mv $PWD/www/* ./public/
 docker exec swag "nginx -s reload"
 docker-compose logs -f
