--- a/feria-a-montevideo/config.toml
+++ b/feria-a-montevideo/config.toml
@@ -16,6 +16,9 @@ navbar_items = [
         { url = "$BASE_URL/", name = "Inicio" },
         { url = "$BASE_URL/posts", name = "Publicaciones" },
         { url = "$BASE_URL/tags", name = "Etiquetas" },
+        { url = "$BASE_URL/posts", name = "Ubicación" },
+        { url = "$BASE_URL/tags", name = "Cronograma" },
+        { url = "$BASE_URL/posts", name = "Contacto" }
     ] },
 ]
 
