--- a/feria-a-montevideo/config.toml
+++ b/feria-a-montevideo/config.toml
@@ -16,19 +16,12 @@ navbar_items = [
         { url = "$BASE_URL/", name = "Inicio" },
         { url = "$BASE_URL/posts", name = "Publicaciones" },
         { url = "$BASE_URL/tags", name = "Etiquetas" },
-        { url = "$BASE_URL/ubicacion", name = "Ubicación" },
-        { url = "$BASE_URL/crono", name = "Cronograma" },
-        { url = "$BASE_URL/contact.html", name = "Contacto" }
+        { url = "$BASE_URL/404.html", name = "Ubicación" },
+        { url = "$BASE_URL/404.html", name = "Cronograma" },
+        { url = "contact.html", name = "Contacto" }
     ] },
 ]
 
 [extra.favicon]
 safari_pinned_tab = "/icons/safari-pinned-tab.svg"
 webmanifest = "/icons/site.webmanifest"
-
-# Author details
-[extra.author]
-name = ""
-avatar = "images/avatar.png"
-
-# Social links
