--- a/feria-a-montevideo/config.toml
+++ b/feria-a-montevideo/config.toml
@@ -18,7 +18,7 @@ navbar_items = [
         { url = "$BASE_URL/tags", name = "Etiquetas" },
         { url = "$BASE_URL/404.html", name = "Ubicación" },
         { url = "$BASE_URL/404.html", name = "Cronograma" },
-        { url = "contact.html", name = "Contacto" }
+        { url = "$BASE_URL/404.html", name = "Contacto" }
     ] },
 ]
 
